--- a/src/Main/signup.form
+++ b/src/Main/signup.form
@@ -208,7 +208,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel4" min="-2" pref="410" max="-2" attributes="0"/>
@@ -261,9 +261,6 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="/Users/MalcolmChen/Downloads/trim.jpg"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="jLabel6"/>
       </Properties>
       <Constraints>
