--- a/src/MissionHolder/MissionStats.form
+++ b/src/MissionHolder/MissionStats.form
@@ -98,8 +98,8 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab1">
-                    <Property name="tabTitle" type="java.lang.String" value="tab1"/>
+                  <JTabbedPaneConstraints tabName="Completed">
+                    <Property name="tabTitle" type="java.lang.String" value="Completed"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -126,8 +126,8 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab2">
-                    <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+                  <JTabbedPaneConstraints tabName="Failed">
+                    <Property name="tabTitle" type="java.lang.String" value="Failed"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -156,7 +156,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Current Mission">
+            <TitledBorder title="Active Missions">
               <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder/>
               </Border>
@@ -209,11 +209,11 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="0">
                         <Column editable="false" title="ID" type="java.lang.Integer"/>
-                        <Column editable="false" title="Hunter ID" type="java.lang.Integer"/>
+                        <Column editable="false" title="Description" type="java.lang.Integer"/>
+                        <Column editable="false" title="Item" type="java.lang.String"/>
                         <Column editable="false" title="Start Time" type="java.lang.String"/>
-                        <Column editable="false" title="Deadline" type="java.lang.String"/>
+                        <Column editable="false" title="Deadline" type="java.lang.Object"/>
                         <Column editable="false" title="Accept Time" type="java.lang.Object"/>
-                        <Column editable="false" title="Item" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -276,11 +276,11 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="0">
                         <Column editable="false" title="ID" type="java.lang.Integer"/>
-                        <Column editable="false" title="Hunter ID" type="java.lang.Integer"/>
+                        <Column editable="false" title="Description" type="java.lang.Integer"/>
+                        <Column editable="false" title="Monster" type="java.lang.String"/>
                         <Column editable="false" title="Start Time" type="java.lang.String"/>
-                        <Column editable="false" title="Deadline" type="java.lang.String"/>
+                        <Column editable="false" title="Deadline" type="java.lang.Object"/>
                         <Column editable="false" title="Accept Time" type="java.lang.Object"/>
-                        <Column editable="false" title="Monster" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
